--- a/pages/alunni.html
+++ b/pages/alunni.html
@@ -174,7 +174,10 @@
         </main>
         <aside>
           <div class="oraDiv">
-          <p id="pOrario"></p>
+            <p id="pBuongiorno"></p>
+            <p id="pOrario"></p>
+            <img src="" alt="not found" id="imgBuongiorno" />
+          </div>
         </aside>
       </div>
     </div>
