--- a/pages/libri.html
+++ b/pages/libri.html
@@ -48,103 +48,109 @@
         </a>
       </nav>
 
-      <main>
-        <div class="content">
-          <header>
-            <h1>LIBRI DI TESTO</h1>
-          </header>
-          <div class="wrapper">
-            <table>
-              <thead>
-                <th>MATERIA</th>
-                <th>TITOLO</th>
-                <th>EDITORE</th>
-                <th>PREZZO</th>
-              </thead>
-              <tbody>
-                <tr>
-                  <th>Religione</th>
-                  <td>Strada con l'altro</td>
-                  <td>Marietti scuola</td>
-                  <td>14,40€</td>
-                </tr>
-                <tr>
-                  <th>Italiano</th>
-                  <td>Le occasioni della letteratura 2</td>
-                  <td>Paravia</td>
-                  <td>32,60€</td>
-                </tr>
-                <tr>
-                  <th>Inglese</th>
-                  <td>Grammar Reference</td>
-                  <td>Petrini</td>
-                  <td>30,00€</td>
-                </tr>
-                <tr>
-                  <th>Inglese</th>
-                  <td>Information technology competences and skills</td>
-                  <td>Minerva italica</td>
-                  <td>25,80€</td>
-                </tr>
-                <tr>
-                  <th>Inglese</th>
-                  <td>Venture into first</td>
-                  <td>Oxford University Press</td>
-                  <td>32,00€</td>
-                </tr>
-                <tr>
-                  <th>Storia</th>
-                  <td>Storia. Progettare il futuro</td>
-                  <td>Zanichelli Editore</td>
-                  <td>32,10€</td>
-                </tr>
-                <tr>
-                  <th>Matematica</th>
-                  <td>Matematica Verde 2ED</td>
-                  <td>Zanichelli Editore</td>
-                  <td>29,50€</td>
-                </tr>
-                <tr>
-                  <th>Teconologie e Progettazione</th>
-                  <td>
-                    Nuovo teconologi e progettazione di sistemi informatici e di
-                    telecomunicazioni
-                  </td>
-                  <td>Hoepli</td>
-                  <td>26,90€</td>
-                </tr>
-                <tr>
-                  <th>Telecomunicazioni</th>
-                  <td>Telecomunicazioni</td>
-                  <td>Tramontana</td>
-                  <td>33,50€</td>
-                </tr>
-                <tr>
-                  <th>Sistemi e reti</th>
-                  <td>Gateway 2</td>
-                  <td>Petrini</td>
-                  <td>19,70€</td>
-                </tr>
-                <tr>
-                  <th>Informatica</th>
-                  <td>Java per impazienti</td>
-                  <td>Pearson</td>
-                  <td>34,00€</td>
-                </tr>
-                <tr>
-                  <th>Scienze motorie</th>
-                  <td>Più movimento</td>
-                  <td>Marietti scuola</td>
-                  <td>22,20€</td>
-                </tr>
-              </tbody>
-            </table>
+      <div class="wrapAside">
+        <main>
+          <div class="content">
+            <header>
+              <h1>LIBRI DI TESTO</h1>
+            </header>
+            <div class="wrapper">
+              <table>
+                <thead>
+                  <th>MATERIA</th>
+                  <th>TITOLO</th>
+                  <th>EDITORE</th>
+                  <th>PREZZO</th>
+                </thead>
+                <tbody>
+                  <tr>
+                    <th>Religione</th>
+                    <td>Strada con l'altro</td>
+                    <td>Marietti scuola</td>
+                    <td>14,40€</td>
+                  </tr>
+                  <tr>
+                    <th>Italiano</th>
+                    <td>Le occasioni della letteratura 2</td>
+                    <td>Paravia</td>
+                    <td>32,60€</td>
+                  </tr>
+                  <tr>
+                    <th>Inglese</th>
+                    <td>Grammar Reference</td>
+                    <td>Petrini</td>
+                    <td>30,00€</td>
+                  </tr>
+                  <tr>
+                    <th>Inglese</th>
+                    <td>Information technology competences and skills</td>
+                    <td>Minerva italica</td>
+                    <td>25,80€</td>
+                  </tr>
+                  <tr>
+                    <th>Inglese</th>
+                    <td>Venture into first</td>
+                    <td>Oxford University Press</td>
+                    <td>32,00€</td>
+                  </tr>
+                  <tr>
+                    <th>Storia</th>
+                    <td>Storia. Progettare il futuro</td>
+                    <td>Zanichelli Editore</td>
+                    <td>32,10€</td>
+                  </tr>
+                  <tr>
+                    <th>Matematica</th>
+                    <td>Matematica Verde 2ED</td>
+                    <td>Zanichelli Editore</td>
+                    <td>29,50€</td>
+                  </tr>
+                  <tr>
+                    <th>Teconologie e Progettazione</th>
+                    <td>
+                      Nuovo teconologi e progettazione di sistemi informatici e
+                      di telecomunicazioni
+                    </td>
+                    <td>Hoepli</td>
+                    <td>26,90€</td>
+                  </tr>
+                  <tr>
+                    <th>Telecomunicazioni</th>
+                    <td>Telecomunicazioni</td>
+                    <td>Tramontana</td>
+                    <td>33,50€</td>
+                  </tr>
+                  <tr>
+                    <th>Sistemi e reti</th>
+                    <td>Gateway 2</td>
+                    <td>Petrini</td>
+                    <td>19,70€</td>
+                  </tr>
+                  <tr>
+                    <th>Informatica</th>
+                    <td>Java per impazienti</td>
+                    <td>Pearson</td>
+                    <td>34,00€</td>
+                  </tr>
+                  <tr>
+                    <th>Scienze motorie</th>
+                    <td>Più movimento</td>
+                    <td>Marietti scuola</td>
+                    <td>22,20€</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
           </div>
-        </div>
-      </main>
-    </div>
-    <div class="oraDiv">
-      <p id="pOrario"></p>
+        </main>
+        <aside>
+          <div class="oraDiv">
+            <p id="pBuongiorno"></p>
+            <p id="pOrario"></p>
+            <img src="" alt="not found" id="imgBuongiorno" />
+          </div>
+        </aside>
+      </div>
     </div>
     <footer>
       <a href="https://www.instagram.com/isis.facchinetti/" target="_blank">
