--- a/pages/orario.html
+++ b/pages/orario.html
@@ -48,82 +48,88 @@
         </a>
       </nav>
 
-      <main>
-        <div class="content">
-          <header>
-            <h1>ORARIO</h1>
-          </header>
-          <div class="wrapper">
-            <table>
-              <thead>
-                <th>ORARIO</th>
-                <th>LUNEDÌ</th>
-                <th>MARTEDÌ</th>
-                <th>MERCOLEDÌ</th>
-                <th>GIOVEDÌ</th>
-                <th>VENERDÌ</th>
-              </thead>
-              <tbody>
-                <tr>
-                  <th>08:00-09:00</th>
-                  <td>Matematica</td>
-                  <td rowspan="2">Scienze Motorie</td>
-                  <td>Informatica</td>
-                  <td rowspan="2">
-                    Laboratorio Teconologie <br />e Progettazione
-                  </td>
-                  <td>Italiano e Storia</td>
-                </tr>
-                <tr>
-                  <th>09:00-10:00</th>
-                  <td>Italiano e Storia</td>
-                  <td>Teconologie e Progettazione</td>
-                  <td>Matematica</td>
-                </tr>
-                <tr>
-                  <th>10:00-11:00</th>
-                  <td>Religione</td>
-                  <td>Sistemi e Reti</td>
-                  <td>Telecomunicazioni</td>
-                  <td>Inglese</td>
-                  <td>Sistemi e Reti</td>
-                </tr>
-                <tr>
-                  <th>11:00-12:00</th>
-                  <td>Informatica</td>
-                  <td>Informatica</td>
-                  <td rowspan="2">Italiano e Storia</td>
-                  <td>Italiano e Storia</td>
-                  <td rowspan="2">Laboratorio Telecomunicazioni</td>
-                </tr>
-                <tr>
-                  <th>12:00-13:00</th>
-                  <td>Italiano e Storia</td>
-                  <td>Matematica</td>
-                  <td>Laboratorio Informatica</td>
-                </tr>
-                <tr>
-                  <th>13:00-14:00</th>
-                  <td>Inglese</td>
-                  <td rowspan="2">Laboratorio Informatica</td>
-                  <td rowspan="2">Laboratorio Sistemi</td>
-                  <td>Matematica</td>
-                  <td>Inglese</td>
-                </tr>
-                <tr>
-                  <th>14:00-15:00</th>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                </tr>
-              </tbody>
-            </table>
+      <div class="wrapAside">
+        <main>
+          <div class="content">
+            <header>
+              <h1>ORARIO</h1>
+            </header>
+            <div class="wrapper">
+              <table>
+                <thead>
+                  <th>ORARIO</th>
+                  <th>LUNEDÌ</th>
+                  <th>MARTEDÌ</th>
+                  <th>MERCOLEDÌ</th>
+                  <th>GIOVEDÌ</th>
+                  <th>VENERDÌ</th>
+                </thead>
+                <tbody>
+                  <tr>
+                    <th>08:00-09:00</th>
+                    <td>Matematica</td>
+                    <td rowspan="2">Scienze Motorie</td>
+                    <td>Informatica</td>
+                    <td rowspan="2">
+                      Laboratorio Teconologie <br />e Progettazione
+                    </td>
+                    <td>Italiano e Storia</td>
+                  </tr>
+                  <tr>
+                    <th>09:00-10:00</th>
+                    <td>Italiano e Storia</td>
+                    <td>Teconologie e Progettazione</td>
+                    <td>Matematica</td>
+                  </tr>
+                  <tr>
+                    <th>10:00-11:00</th>
+                    <td>Religione</td>
+                    <td>Sistemi e Reti</td>
+                    <td>Telecomunicazioni</td>
+                    <td>Inglese</td>
+                    <td>Sistemi e Reti</td>
+                  </tr>
+                  <tr>
+                    <th>11:00-12:00</th>
+                    <td>Informatica</td>
+                    <td>Informatica</td>
+                    <td rowspan="2">Italiano e Storia</td>
+                    <td>Italiano e Storia</td>
+                    <td rowspan="2">Laboratorio Telecomunicazioni</td>
+                  </tr>
+                  <tr>
+                    <th>12:00-13:00</th>
+                    <td>Italiano e Storia</td>
+                    <td>Matematica</td>
+                    <td>Laboratorio Informatica</td>
+                  </tr>
+                  <tr>
+                    <th>13:00-14:00</th>
+                    <td>Inglese</td>
+                    <td rowspan="2">Laboratorio Informatica</td>
+                    <td rowspan="2">Laboratorio Sistemi</td>
+                    <td>Matematica</td>
+                    <td>Inglese</td>
+                  </tr>
+                  <tr>
+                    <th>14:00-15:00</th>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
           </div>
-        </div>
-      </main>
-    </div>
-    <div class="oraDiv">
-      <p id="pOrario"></p>
+        </main>
+        <aside>
+          <div class="oraDiv">
+            <p id="pBuongiorno"></p>
+            <p id="pOrario"></p>
+            <img src="" alt="not found" id="imgBuongiorno" />
+          </div>
+        </aside>
+      </div>
     </div>
     <footer>
       <a href="https://www.instagram.com/isis.facchinetti/" target="_blank">
