--- a/pages/professori.html
+++ b/pages/professori.html
@@ -48,102 +48,108 @@
         </a>
       </nav>
 
-      <main>
-        <div class="content">
-          <header>
-            <h1>PROFESSORI</h1>
-          </header>
-          <div class="wrapper">
-            <table>
-              <thead>
-                <th>NOME</th>
-                <th>COGNOME</th>
-                <th>MATERIA</th>
-                <th>ORE A SETTIMANA</th>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>Luca</td>
-                  <td>Barracato</td>
-                  <td>Italiano<br />Storia</td>
-                  <td>6</td>
-                </tr>
-                <tr>
-                  <td>Claudia</td>
-                  <td>Ciarambino</td>
-                  <td>Informatica</td>
-                  <td>6</td>
-                </tr>
-                <tr>
-                  <td>Alessandro</td>
-                  <td>Perego</td>
-                  <td>Matematica</td>
-                  <td>4</td>
-                </tr>
-                <tr>
-                  <td>Antonio</td>
-                  <td>Santoro</td>
-                  <td>Informatica Lab.</td>
-                  <td>2</td>
-                </tr>
-                <tr>
-                  <td>Giuseppe</td>
-                  <td>Trovato</td>
-                  <td>Sistemi e Reti</td>
-                  <td>3</td>
-                </tr>
-                <tr>
-                  <td>Sara</td>
-                  <td>Colombo</td>
-                  <td>Inglese</td>
-                  <td>3</td>
-                </tr>
-                <tr>
-                  <td>Valentina</td>
-                  <td>Corà</td>
-                  <td>Religione</td>
-                  <td>1</td>
-                </tr>
-                <tr>
-                  <td>Giulio</td>
-                  <td>Scordo</td>
-                  <td>Telecomunicazioni Lab.</td>
-                  <td>2</td>
-                </tr>
-                <tr>
-                  <td>Sara</td>
-                  <td>Di Francesco</td>
-                  <td>Scienze motorie e sportive</td>
-                  <td>2</td>
-                </tr>
-                <tr>
-                  <td>Mario</td>
-                  <td>La Vecchia</td>
-                  <td>Telecomunicazioni</td>
-                  <td>3</td>
-                </tr>
-                <tr>
-                  <td>Mario</td>
-                  <td>Gaglio</td>
-                  <td>Teconologie e Progettazione</td>
-                  <td>3</td>
-                </tr>
-                <tr>
-                  <td></td>
-                  <td></td>
-                  <td>
-                    Teconologie e Progettazione Lab. <br />Sistemi e Reti Lab.
-                  </td>
-                  <td>4</td>
-                </tr>
-              </tbody>
-            </table>
+      <div class="wrapAside">
+        <main>
+          <div class="content">
+            <header>
+              <h1>PROFESSORI</h1>
+            </header>
+            <div class="wrapper">
+              <table>
+                <thead>
+                  <th>NOME</th>
+                  <th>COGNOME</th>
+                  <th>MATERIA</th>
+                  <th>ORE A SETTIMANA</th>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>Luca</td>
+                    <td>Barracato</td>
+                    <td>Italiano<br />Storia</td>
+                    <td>6</td>
+                  </tr>
+                  <tr>
+                    <td>Claudia</td>
+                    <td>Ciarambino</td>
+                    <td>Informatica</td>
+                    <td>6</td>
+                  </tr>
+                  <tr>
+                    <td>Alessandro</td>
+                    <td>Perego</td>
+                    <td>Matematica</td>
+                    <td>4</td>
+                  </tr>
+                  <tr>
+                    <td>Antonio</td>
+                    <td>Santoro</td>
+                    <td>Informatica Lab.</td>
+                    <td>2</td>
+                  </tr>
+                  <tr>
+                    <td>Giuseppe</td>
+                    <td>Trovato</td>
+                    <td>Sistemi e Reti</td>
+                    <td>3</td>
+                  </tr>
+                  <tr>
+                    <td>Sara</td>
+                    <td>Colombo</td>
+                    <td>Inglese</td>
+                    <td>3</td>
+                  </tr>
+                  <tr>
+                    <td>Valentina</td>
+                    <td>Corà</td>
+                    <td>Religione</td>
+                    <td>1</td>
+                  </tr>
+                  <tr>
+                    <td>Giulio</td>
+                    <td>Scordo</td>
+                    <td>Telecomunicazioni Lab.</td>
+                    <td>2</td>
+                  </tr>
+                  <tr>
+                    <td>Sara</td>
+                    <td>Di Francesco</td>
+                    <td>Scienze motorie e sportive</td>
+                    <td>2</td>
+                  </tr>
+                  <tr>
+                    <td>Mario</td>
+                    <td>La Vecchia</td>
+                    <td>Telecomunicazioni</td>
+                    <td>3</td>
+                  </tr>
+                  <tr>
+                    <td>Mario</td>
+                    <td>Gaglio</td>
+                    <td>Teconologie e Progettazione</td>
+                    <td>3</td>
+                  </tr>
+                  <tr>
+                    <td></td>
+                    <td></td>
+                    <td>
+                      Teconologie e Progettazione Lab. <br />Sistemi e Reti Lab.
+                    </td>
+                    <td>4</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
           </div>
-        </div>
-      </main>
-    </div>
-    <div class="oraDiv">
-      <p id="pOrario"></p>
+        </main>
+        <aside>
+          <div class="oraDiv">
+            <p id="pBuongiorno"></p>
+            <p id="pOrario"></p>
+            <img src="" alt="not found" id="imgBuongiorno" />
+          </div>
+        </aside>
+      </div>
     </div>
     <footer>
       <a href="https://www.instagram.com/isis.facchinetti/" target="_blank">
