--- a/pages/orario.html
+++ b/pages/orario.html
@@ -71,14 +71,14 @@
                     <td rowspan="2">Scienze Motorie</td>
                     <td>Informatica</td>
                     <td rowspan="2">
-                      Laboratorio Teconologie <br />e Progettazione
+                      Laboratorio Tecnologie <br />e Progettazione
                     </td>
                     <td>Italiano e Storia</td>
                   </tr>
                   <tr>
                     <th>09:00-10:00</th>
                     <td>Italiano e Storia</td>
-                    <td>Teconologie e Progettazione</td>
+                    <td>Tecnologie e Progettazione</td>
                     <td>Matematica</td>
                   </tr>
                   <tr>
