--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
       rel="stylesheet" />
     <script src="../js/sketch.js" type="text/javascript" defer></script>
-    <script
-      src="https://kit.fontawesome.com/332c6e2590.js"
-      crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/2b654a1dfa.js" crossorigin="anonymous"></script>
     <title>4GI</title>
   </head>
 
